Run custom build program in same process